[gd_scene load_steps=4 format=3 uid="uid://4m387tsg01hm"]

[ext_resource type="Script" path="res://scripts/hud/enemy_indicator.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://86bs5obiysxo" path="res://assets/images/HUD/icons/arrow.png" id="2"]
[ext_resource type="Texture2D" uid="uid://bv5can7ganyd7" path="res://assets/images/HUD/icons/alert_icon.png" id="3"]

[node name="EnemyIndicator" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1")

[node name="ArrowSprite" type="Sprite2D" parent="."]
texture = ExtResource("2")

[node name="AlertIcon" type="Sprite2D" parent="."]
position = Vector2(0, 73)
texture = ExtResource("3")

[node name="DistanceLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = 15.0
offset_right = 25.0
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2
text = "1000m"
horizontal_alignment = 1
